<resources>
    <string name="app_name">极彩网</string>
    <string name="caipiaodating">彩票大厅</string>
    <string name="hemaizhongxin">合买中心</string>
    <string name="kaijianggonggao">开奖公告</string>
    <string name="gerenzhanghu">个人账户</string>
    <string name="gengduo">更多...</string>
    <string name="di2">,第</string>
    <string name="caipiaogongjuxiang">彩票工具</string>
    <string name="gengduo2">更多</string>
    <string name="xiazaizhong2">下载中,请稍后...</string>
    <string name="loading">加载中...</string>
    <string name="loading2">数据正在加载中...</string>
    <string name="qita2">其他:</string>
    <string name="qingxuanzezhongjiangzhuangtai">请选择状态</string>
    <string name="gengduocaizhongjijiangkaifang">更多彩种即将开放...</string>
    <string name="dengluchenggonghuanyingtiyijian">登录成功,欢迎您反馈意见</string>
    <string name="caizhong2">彩种:</string>
    <string name="fucai2">福彩:</string>
    <string name="ticai2">体彩:</string>
    <string name="kuaikai2">快开:</string>
    <string name="sangzhangengduocaizhong">>>3G站可购买更多彩种</string>
    <string name="dantuo">胆拖投注</string>
    <string name="wanfa">玩法</string>
    <string name="fanhuixiugai">返回修改</string>
    <string name="dengluhoucainengtijiao">登录后才能提交，谢谢</string>
    <string name="querenzhuxiao2">确认退出账户?</string>
    <string name="leijizhongchutingzhizhuihaojinebunengweikong">累计中出停止金额不能为空</string>
    <string name="ren">人</string>
    <string name="tuichuzhanghu">退出账户</string>
    <string name="yinlianyuyin">银联语音</string>
    <string name="shuangseqiu">双色球</string>
    <string name="chaojidaletou">大乐透</string>
    <string name="qilecai">七乐彩</string>
    <string name="fucai15xuan5">15选5</string>
    <string name="jiangqiguoqitip">期号%1$s投注已截止，当前最新期号已更新为%2$s,是否继续购买</string>
    <string name="qixingcai">七星彩</string>
    <string name="fucai3d">福彩3D</string>
    <string name="dongfangliujiayi">东方6+1</string>
    <string name="quanguo22xuan5">全国22选5</string>
    <string name="ticai20xuan5">体彩20选5</string>
    <string name="xinyunsaiche">幸运赛车</string>
    <string name="xinkuai3">内蒙快3</string>
    <string name="pailie5">排列5</string>
    <string name="ticai6jia1">体彩6+1</string>
    <string name="shanghaishishile">上海时时乐</string>
    <string name="chongqingshishicai">重庆时时彩</string>
    <string name="qiann">前%1$s</string>
    <string name="qianhouqudanmatishi">%1$s胆码(选%2$s-%3$s个)</string>
    <string name="qianhouqutuomatishi">%1$s拖码(胆+拖≥%2$s个)</string>
    <string name="qianhouqudanmatishi2">%1$s胆码只能选择1个</string>
    <string name="qianhouqudanmatishi3">%1$s胆码最多选择1个</string>
    <string name="houn">后%1$s</string>
    <string name="shengxiao">生肖</string>
    <string name="shengxiaobunengzhuijia">方案中有生肖玩法,不能追加投注</string>
    <string name="qiannzhixuan">前%1$s直选</string>
    <string name="pailie3">排列3</string>
    <string name="pailie35">排列3/5</string>
    <string name="sanxingzhixuan">三星直选</string>
    <string name="sixingzhixuan">四星</string>
    <string name="sanxingzu3">三星组3</string>
    <string name="sanxingzu6">三星组6</string>
    <string name="erxingzhixuan">二星直选</string>
    <string name="erxingzuxuan">二星组选</string>
    <string name="yixingzhixuan">一星</string>
    <string name="wuxingzhixuan">五星</string>
    <string name="wuxingtongxuan">五星通选</string>
    <string name="daxiaodanshuang">大小单双</string>
    <string name="shiyiyunduojin">十一运夺金</string>
    <string name="xinshishicai">江西时时彩</string>
    <string name="laoshishicai">重庆时时彩</string>
    <string name="lao11xuan5">十一运夺金</string>
    <string name="xin11xuan5">江西11选5</string>
    <string name="now11xuan5">上海11选5</string>
    <string name="qian2zuxuan">前2组选</string>
    <string name="lian2zuxuan">连2组选</string>
    <string name="lian2zhixuan">连2直选</string>
    <string name="qian3zuxuan">前3组选</string>
    <string name="rennzhongm">任%1$s中%2$s</string>
    <string name="renxuann">任选%1$s</string>
    <string name="wanchengxuanhao">完成选号</string>
    <string name="fanhui">返回</string>
    <string name="exit_app_confirm1">您确定要退出%1$s吗?</string>
    <string name="press_again_to_exit">再按一次退出</string>
    <string name="yonghuzhuce">用户注册</string>
    <string name="zhaohuimima">找回密码</string>
    <string name="bangzhuzhongxin">帮助中心</string>
    <string name="xitongshezhi">系统设置</string>
    <string name="banbenxinxi">版本信息</string>
    <string name="yijianfankui">意见反馈</string>
    <string name="kefuzhibo2">客服直拨:</string>
    <string name="yaoqinghaoyou">邀请好友</string>
    <string name="qingxuanzewentileixing">请选择问题类型</string>
    <string name="gengduoshezhi">更多设置</string>
    <string name="zhifubaochongzhi">支付宝充值</string>
    <string name="yinlianzaixianzhifu">银联手机支付</string>
    <string name="qingshurufankuineirong">请输入反馈内容</string>
    <string name="ganxienindefankui">您的意见已提交,感谢您的反馈</string>
    <string name="chooseatleast">至少选择%1$s个%2$s</string>
    <string name="chooseatleast2">,%1$s个%2$s</string>
    <string name="chooseatleast3">%1$s(至少选%2$s个)</string>
    <string name="qianqu">前区</string>
    <string name="houqu">后区</string>
    <string name="hongqiu">红球</string>
    <string name="lanqiu">蓝球</string>
    <string name="jixuan">机选%1$s</string>
    <string name="haoma">号码</string>
    <string name="wangluolianjiebukeyong">网络连接不可用!</string>
    <string name="meiweizhishaoyige">每位至少选择一个号码</string>
    <string name="meiweizhishaoyige2">每位至少选择一个</string>
    <string name="daxiaodanshuangtip">每位选择一个</string>
    <string name="zusandanshitip">至少选1个重号和1个单号</string>
    <string name="renxuantip">至少选择%1$s位</string>
    <string name="tuichuwangyefanhuikehuduan">确认退出网页，返回客户端?</string>
    <string name="putongtouzhu">普通投注</string>
    <string name="zhixuan">直选</string>
    <string name="zu3">组3</string>
    <string name="zu6">组6</string>
    <string name="bunengchaoguo">不能超过%1$s元</string>
    <string name="touzhutotalcountandmoney">共%1$s注,%2$s元</string>
    <string name="zuiduozhinengxuanze">最多只能选择%1$s个号码</string>
    <string name="ge">个</string>
    <string name="touzhuqueren">投注确认</string>
    <string name="qingzhishaoxuanze1zhu">请至少选择1注</string>
    <string name="shouxuantouzhu">添加手选号码</string>
    <string name="jixuantouzhu">添加一注机选</string>
    <string name="tuichutishi">退出提示</string>
    <string name="tuichutouzhufou">确定退出投注吗？退出后，投注号码不会被保存。</string>
    <string name="qingkongtuzhulist">您确定要清空当前投注列表吗?</string>
    <string name="tuichushezhifou">您当前的投注设置已修改，是否保存?</string>
    <string name="goumai">购买</string>
    <string name="faqihemai">发起合买</string>
    <string name="fukuan">付款</string>
    <string name="zhuihao">追号倍投</string>
    <string name="pre_pull_to_load_more">下拉可刷新</string>
    <string name="pre_release_to_load_more">松开可刷新</string>
    <string name="pre_loading">加载中...</string>
    <string name="next_pull_to_load_more">上拉加载下一页</string>
    <string name="next_release_to_load_more">松开加载下一页</string>
    <string name="next_loading">加载中...</string>
    <string name="allready_first">已经是第一页</string>
    <string name="allready_last">已经是最后一页</string>
    <string name="getmore">查看更多</string>
    <string name="baocun">保存</string>
    <string name="bubaocun">不保存</string>
    <string name="jindu">进度</string>
    <string name="zonge">总额</string>
    <string name="meifen">每份</string>
    <string name="fanganxiangqing">方案详情</string>
    <string name="huodongxiangqing">活动详情</string>
    <string name="tongyixieyi">我已阅读并同意</string>
    <string name="woyi18sui">我已经年满18岁并同意</string>
    <string name="yonghufuwutiaokuan">用户服务条款</string>
    <string name="yonghufuwutiaokuan2">《用户服务条款》</string>
    <string name="shengjitishi">升级提示</string>
    <string name="lijishengji">立即升级</string>
    <string name="zanbushengji">暂不升级</string>
    <string name="kehuduanyougengxin">发现客户端最新版本%1$s，建议更新，谢谢</string>
    <string name="nindekehuduanbanbenguodi">发现客户端最新版本%1$s，您的版本过低，必须升级，谢谢</string>
    <string name="yijingshizuixinbanben">已经是最新版本</string>
    <string name="jiancezhong2">检测中...</string>
    <string name="nindewangluochuwentila">网络连接失败，请退出后重试!</string>
    <string name="yueduxieyi">《用户合买代购协议》</string>
    <string name="yueduxieyititle">合买代购协议</string>
    <string name="dangqianqihao">当前期号:</string>
    <string name="zongzhushu">总注数:</string>
    <string name="beishu">倍数:</string>
    <string name="zhuihaoqishu">追号期数:</string>
    <string name="touzhuhaoma">投注号码:</string>
    <string name="zongjine">总金额:</string>
    <string name="goumaiquerendan">购买确认</string>
    <string name="yuan">元</string>
    <string name="zhu">注</string>
    <string name="zhu2">注&#160;&#160;</string>
    <string name="zhutext">注X</string>
    <string name="beitext">倍X</string>
    <string name="qitext">期=</string>
    <string name="qi">期</string>
    <string name="bei">倍</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="zhongjianghoutingzhizhuihao">中奖后停止追号</string>
    <string name="zhongjianghoutingzhizhuihao2">追号停止:</string>
    <string name="touzhubeishu">投注倍数</string>
    <string name="zhuihaoqishu2">追号期数</string>
    <string name="querentouzhu">确认投注</string>
    <string name="querengendan">确认跟单</string>
    <string name="quxiao">取消</string>
    <string name="wancheng">完成</string>
    <string name="nzhunbeinqi">%1$s注%2$s倍%3$s期,</string>
    <string name="gongnyuan">共%1$s元</string>
    <string name="dangqiancaizhong">当前彩种</string>
    <string name="qingxuanzetouzhuhanma">请选择投注号码</string>
    <string name="yaoyaojixuanyizhu">摇摇手机 机选1注</string>
    <string name="exist_app">是否退出</string>
    <string name="zhanghuchongzhi">账户充值</string>
    <string name="wodezhanghu">我的账户</string>
    <string name="yonghubangzhu">用户帮助</string>
    <string name="goucaianquan">购彩安全</string>
    <string name="duihuanma2">兑换码:</string>
    <string name="zhanghao2">用户名:</string>
    <string name="mima2">密码:</string>
    <string name="qurenmima2">确认密码:</string>
    <string name="ruguomeiyouzhanghao">如果您没有账号:</string>
    <string name="jizhumima">记住密码</string>
    <string name="zidongdenglu">自动登录</string>
    <string name="denglu">登录</string>
    <string name="zhucezhanghao">注册账号</string>
    <string name="yonghudenglu">用户登录</string>
    <string name="dengluzhong">登录中...</string>
    <string name="zhanghaohuomimabunengweikong">用户名或密码不能为空</string>
    <string name="ninquerenyaochedanma">您确定要撤单吗?</string>
    <string name="chedan">撤单</string>
    <string name="jixugoumai">继续购买</string>
    <string name="qianwanggoucaidating">前往彩票大厅</string>
    <string name="chedanchenggong">撤单成功</string>
    <string name="error">请求失败</string>
    <string name="yue2">余额:</string>
    <string name="jifen2">积分:</string>
    <string name="tubiao">图表</string>
    <string name="zhanghutikuan">账户提款</string>
    <string name="jifenduihuan">积分兑换</string>
    <string name="goucaijilu">购彩记录</string>
    <string name="wodeguanzhu">我的关注</string>
    <string name="zhongjiangjilu">中奖记录</string>
    <string name="zhuihaojilu">追号记录</string>
    <string name="hemaijilu">合买记录</string>
    <string name="zijinmingxi">资金明细</string>
    <string name="gerenxinxi">个人信息</string>
    <string name="zhanghuanquan">修改密码</string>
    <string name="jingcaizuqiu">竞彩足球</string>
    <string name="renxuan9chang">任选9场</string>
    <string name="shengfu14chang">胜负14场</string>
    <string name="kuaile10fen">快乐十分</string>
    <string name="btn_ok">确定</string>
    <string name="login_username_hint">请输入手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_btn">登录</string>
    <string name="login_pw_forget">忘记密码?</string>
    <string name="register">注册</string>
    <string name="register_pw_title">设置密码</string>
    <string name="register_pw_set">请设置登录密码（6-20个字符）</string>
    <string name="login_forget_pw_username">用户名</string>
    <string name="login_forget_pw_phonenum">手机号码</string>
    <string name="va">输入验证码</string>
    <string name="get">点击免费获取</string>
    <string name="bjdc">北京单场</string>
    <string name="nickname">请输入用户名</string>
    <string name="siz_chang">6场半全场</string>
    <string name="for_chang">四场进球彩</string>
</resources>