<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".app.user.login.RegeditActivity">

    <include layout="@layout/title_back"
            />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">

        <com.chengyi.app.view.ClearEditText
                android:id="@+id/username"
                android:drawableLeft="@drawable/phone"
        
                style="@style/Pwd"
                android:maxLength="16"
                android:maxLines="1"
                
                android:hint="@string/login_username_hint">
        </com.chengyi.app.view.ClearEditText>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="6dp"
                android:background="#ccc"/>

        <com.chengyi.app.view.ClearEditText
                style="@style/Pwd"
                android:id="@+id/user_name"
                android:drawableLeft="@drawable/val"
                android:hint="@string/nickname"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="6dp"
                android:background="#ccc"/>

        <com.chengyi.app.view.ClearEditText
                style="@style/Pwd"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:hint="@string/login_password_hint">
        </com.chengyi.app.view.ClearEditText>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="6dp"
                android:background="#ccc"/>
        <com.chengyi.app.view.ClearEditText
                style="@style/Pwd"
                android:id="@+id/superiorUserID"
                android:drawableLeft="@drawable/yaoqing"
                
                android:hint="邀请人(可选)">
        </com.chengyi.app.view.ClearEditText>
    
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="6dp"
                android:background="#ccc"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">


            <EditText
                    android:layout_width="0dp"
                    android:id="@+id/et_verifyCode"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:layout_marginLeft="16dp"
                    android:background="@color/white"
                    android:drawableLeft="@drawable/val"
                    android:hint="@string/va"/>

            <View
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:background="@color/gray_text"/>

            <Button
                    android:layout_width="0dp"
                    android:id="@+id/btn_get"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@android:color/transparent"
                    android:textSize="14sp"
                    android:textColor="@color/red"
                    android:text="@string/get"/>

        </LinearLayout>


    </LinearLayout>

    <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_margin="16dp"
            android:paddingTop="@dimen/gap_ms"
            android:paddingBottom="@dimen/gap_ms"
            android:background="@drawable/red_bg"
            android:textSize="@dimen/text_size_m"
            android:textColor="@color/white"
            android:text="@string/register"/>

</LinearLayout>
